added router module and base href

--- a/planner2/public/planner.html
+++ b/planner2/public/planner.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<base href ="/">
 <title>Planner in Angular2</title>
 <!-- load scripts and polyfills -->
 <script src="../node_modules/es6-shim/es6-shim.min.js"></script>
@@ -8,6 +9,7 @@
 <script src="../node_modules/systemjs/dist/system.src.js"></script>
 <script src="../node_modules/rxjs/bundles/Rx.js"></script>
 <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
+<script src="node_modules/angular2/bundles/router.dev.js"></script>
 
 <!-- Configure System.js -->
 <script>
