compile typescript on all ts

--- a/angular2/angular2-forms/index.html
+++ b/angular2/angular2-forms/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 	<title>Angular 2 Forms</title>
-	<script src="./node_modules/es6-shim/es6-shim.min.js"></script>
-<script src="./node_modules/systemjs/dist/system-polyfills.js"></script>
-<script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
-<script src="./node_modules/systemjs/dist/system.src.js"></script>
-<script src="./node_modules/rxjs/bundles/Rx.js"></script>
-<script src="./node_modules/angular2/bundles/angular2.dev.js"></script>
-<script src="./node_modules/angular2/bundles/router.dev.js"></script>
+	<script src="node_modules/es6-shim/es6-shim.min.js"></script>
+<script src="node_modules/systemjs/dist/system-polyfills.js"></script>
+<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+<script src="node_modules/systemjs/dist/system.src.js"></script>
+<script src="node_modules/rxjs/bundles/Rx.js"></script>
+<script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+<script src="node_modules/angular2/bundles/router.dev.js"></script>
 <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
 <script>
 System.config({
@@ -18,7 +18,7 @@ System.config({
 		}
 	}
 });
-System.import('main')
+System.import('main.js')
 	.then(null, console.error.bind(console));
 </script>
 
