insidious selector error. use string and not '<>'

--- a/angular2/angular2-forms/index.html
+++ b/angular2/angular2-forms/index.html
@@ -25,6 +25,7 @@ System.import('app/main')
 
 </head>
 <body>
-	<form-app></form-app>
+	<div>test2</div>
+	<form-app>Illegal Stringing....</form-app>
 </body>
 </html>
