--- a/angular2/ang-grid/index.html
+++ b/angular2/ang-grid/index.html
@@ -7,23 +7,14 @@
 
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
-    <script src="node_modules/es6-shim/es6-shim.min.js"></script>
-
+    <script src="/node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
-
+    <script src="./node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="/node_modules/systemjs/dist/system.js"></script>
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
-    System.config({
-	packages: {
-		app: {
-			defaultExtension: 'js'
-		}
-	}
-	});
-      System.import('app')
+      System.import('app/main.js')
       .catch(function(err){ 
       	console.error(err);  
       });
